added reset password and its documentation
