# controllers/user.controllers.js
@@ -27,6 +27,7 @@ module.exports = {
           message: "Input must be required",
           data: null,
         });
+        
       } else if (exist) {
         return res.status(401).json({
           status: false,
@@ -306,6 +307,78 @@ module.exports = {
       return res.status(200).json({
         status: true,
         message: "Success Send Email Forget Password",
+      });
+    } catch (error) {
+      next(error);
+    }
+  },
+  resetPassword: async (req, res, next) => {
+    try {
+      const { token } = req.query;
+      const { password, passwordConfirmation } = req.body;
+      const passwordValidator =
+      /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,12}$/;
+
+      if (!password || !passwordConfirmation) {
+        return res.status(400).json({
+          status: false,
+          message: "Both password and password confirmation are required!",
+          data: null,
+        });
+      }
+
+      if (password !== passwordConfirmation) {
+        return res.status(401).json({
+          status: false,
+          message:
+            "Please ensure that the password and password confirmation match!",
+          data: null,
+        });
+      }
+
+      if (!passwordValidator.test(password)) {
+        return res.status(400).json({
+          status: false,
+          message:
+            "Invalid password format. It must contain at least 1 lowercase, 1 uppercase, 1 digit number, 1 symbol, and be between 8 and 12 characters long.",
+          data: null,
+        });
+      }
+
+      let hashPassword = await bcrypt.hash(password, 10);
+
+      // Verify the token
+      jwt.verify(token, JWT_SECRET_KEY, async (err, decoded) => {
+        if (err) {
+          return res.status(403).json({
+            status: false,
+            message: "Invalid or expired token!",
+            data: null,
+          });
+        }
+
+        // Update password for the user
+        const updateUser = await prisma.user.update({
+          where: { email: decoded.email },
+          data: { password: hashPassword },
+        });
+        delete updateUser.password;
+        updateUser.otpCreatedAt = formatDateTimeToUTC(updateUser.otpCreatedAt)
+
+        const notification = await prisma.notification.create({
+          data: {
+            title: "Password",
+            message: "Your password has been updated successfully!",
+            createdAt: new Date().toISOString(),
+            user: { connect: { id: updateUser.id } },
+          },
+        });
+
+        res.status(200).json({
+          status: true,
+          message: "Your password has been updated successfully!",
+          data: updateUser,
+        });
       });
     } catch (error) {
       next(error);
