# docs/api-docs.yaml
@@ -314,6 +314,96 @@ paths:
                   data:
                     example: ~
 
+  /users/reset-password:
+    put:
+      tags:
+        - "Users"
+      summary: Reset Password Email User
+      parameters:
+        - schema:
+            type: string
+          name: token
+          in: query
+          description: token for update password
+      description: Reset Password Email User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                password:
+                  type: string
+                  example: FlynowB6#
+                passwordConfirmation:
+                  type: string
+                  example: FlynowB6#
+
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "Your password has been updated successfully!"
+                  data:
+                    $ref: "#/components/schemas/UserResponse"
+
+        400:
+          description: Both password and password confirmation are required!!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Both password and password confirmation are required!!"
+                  data:
+                    example: ~
+
+        401:
+          description: Please ensure that the password and password confirmation match!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Please ensure that the password and password confirmation match!"
+                  data:
+                    example: ~
+
+        403:
+          description: Invalid or expired token!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Invalid or expired token!"
+                  data:
+                    example: ~
+
 components:
   securitySchemes:
     bearerAuth:
