# routes/user.routes.js
@@ -1,5 +1,5 @@
 const router = require("express").Router();
-const { register, login, verifyOtp, resendOtp, forgetPassword } = require("../controllers/user.controllers");
+const { register, login, verifyOtp, resendOtp, forgetPassword, resetPassword } = require("../controllers/user.controllers");
 
 // API Auth Users
 router.post("/users/register", register);
@@ -7,5 +7,6 @@ router.post("/users/login", login);
 router.put("/users/verify-otp", verifyOtp);
 router.put("/users/resend-otp", resendOtp);
 router.post("/users/forget-password", forgetPassword);
+router.put("/users/reset-password", resetPassword);
 
 module.exports = router;
